My 1st attempt of the Problem Set 1

--- a/answers.yml
+++ b/answers.yml
@@ -1,1 +1,10 @@
 answer-1: North_Dakota
+answer-2: 4
+answer-3: 438
+answer-4: 273
+answer-5: 50
+answer-6: 21
+answer-7: chromosome 10 open reading frame 139
+answer-8: 25
+answer-9: 479
+answer-10: chr9
